Fix navigation menu behaviour on mobile

--- a/nav-menu.css
+++ b/nav-menu.css
@@ -217,7 +217,7 @@ body {
     #cs-navigation .cs-ul {
         width: auto;
         min-width: 40%;
-        height: 65vh;
+        /*height: 65vh;*/
         margin: 0;
         /* 28px - 40px */
         padding: 3rem clamp(1.75rem, 3vw, 2.5rem) 2rem 2.2rem;
